@@ -12,6 +12,7 @@ import org.springframework.messaging.Message;
 import org.springframework.messaging.support.GenericMessage;
 import reactor.core.publisher.Mono;
 
+import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 
@@ -81,7 +82,7 @@ public abstract class SendOperationTest<O extends SendOperation> {
     @Test
     public void testSendWithSessionId() throws ExecutionException, InterruptedException {
         Message<?> messageWithSeesionId = new GenericMessage<>("testPayload",
-            ImmutableMap.of("key1", "value1", "azure_service_bus_session_id", "TestSessionId"));
+            Map.of("key1", "value1", "azure_service_bus_session_id", "TestSessionId"));
         CompletableFuture<Void> future = this.sendOperation.sendAsync(destination, messageWithSeesionId);
 
         assertNull(future.get());
@@ -90,7 +91,7 @@ public abstract class SendOperationTest<O extends SendOperation> {
 
     @Test
     public void testSendWithSessionIdAndPartitionKeyDifferent() throws ExecutionException, InterruptedException {
-        Message<?> messageWithSeesionId = new GenericMessage<>("testPayload", ImmutableMap.of("key1", "value1",
+        Message<?> messageWithSeesionId = new GenericMessage<>("testPayload", Map.of("key1", "value1",
             "azure_service_bus_session_id", "TestSessionId", "azure_service_bus_partition_key", "TestPartitionKey"));
         CompletableFuture<Void> future = this.sendOperation.sendAsync(destination, messageWithSeesionId);
 
